# pygame_sdl2

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.rst  Setup  commit_test.py  distribute.py  fix_virtualenv.py  generate_sdl2_pxd.py  install_headers.py  pyproject.toml  run.sh  run_pygame_test.py  sdl2.c  setup.py  setuplib.py  test.py  test_blit_matrix.py  test_image.py  test_render.py  test_sound.py
docs/: index.rst
include/: color_dict.pxi  enums.json  event_enum.pxi  event_list.pxi  event_names.pxi  glattr.pxi  keycode_list.pxi  old_sdl2.pxd  scancode_dict.pxi  sdl2.pxd  sdl2_gfx.pxd  sdl2_image.pxd  sdl2_mixer.pxd
old-tests/: test_blit_matrix.py  test_render.py
scripts/: build_all.sh  build_nightly.sh  build_win.sh  generate_colordict.py  generate_controller.py  generate_event_list.py  generate_glattr.py  generate_keycode_list.py  generate_sdl2_pxd.py  run_win.py  util.py
src/: SDL_gfxPrimitives.c  python_threads.h  sdl_image_compat.h  write_jpeg.c  write_jpeg.h  write_png.c
src/pygame_sdl2/: __init__.py  color.pxd  color.pyx  controller.pyx  display.pxd  display.pyx  draw.pyx  error.pyx  event.pyx  font.pyx  gfxdraw.pyx  image.pyx  joystick.pyx  key.pyx  locals.pyx  mixer.pyx  mixer_music.pyx  mouse.pyx  pygame_sdl2.h  pygame_time.pyx  rect.pxd  rect.pyx  render.pyx  rwobject.pxd  rwobject.pyx  scrap.pyx  sprite.py  surface.pxd  surface.pyx  sysfont.py  time.pyx  transform.pyx  version.py
test/: surface_test.py
test/test_utils/: __init__.py  async_sub.py
test/util/build_page/: warnings.php
