[project]
name = "pygame_sdl2"
version = "2.1.0"
readme = "README.rst"
requires-python = "==3.12.*"
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.11", "cython>=3.1.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
# build.verbose = true
# logging.level = "INFO"

[tool.scikit-build.cmake.define]
CMAKE_C_COMPILER = { env = "CC", default = "gcc" }
PYGAME_SDL2_STATIC = { env = "PYGAME_SDL2_STATIC", default = false }
